# proy_SSDD_II

./: .gitignore  README.md  airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  check_kafka.sh  config.toml  docker-compose.yml  main.py  pyproject.toml  simple_auth_manager_passwords.json.generated
dags/: DAG_neighbourhoods.py  airbnb_listings_dag.py  calendar_dag.py  listingsDAG.py
notebooks/: EDA.ipynb  cleaning_listings(1).ipynb  dag_neighbourhoods.ipynb  eda_calendar.ipynb  eda_listings.ipynb  eda_reviews.ipynb
notebooks/eda/: eda_neighbourhoods.ipynb
notebooks/eda/listings/: cleaning_listings.ipynb  prepare_listings.ipynb
notebooks/prototyping/: dag_listings.ipynb  dag_neighbourhoods.ipynb  dag_reviews.ipynb
src/: utils.py
src/kafka/: consumer_kafka.py  producer_kafka.py
src/reports/: report_calendar.html  report_calendar.py  report_listings.html  report_listings.py  report_reviews.html  report_reviews.py
src/transformations/: DAG_neighbourhoods.py  airbnb_listings_dag.py  airbnb_reviews_dag.py  calendar_dag.py  dag_calendar.py  dag_listings.py  dag_reviews.py  report_reviews.html  report_template.html
